# bd-agent

./: .gitignore  CLAUDE.md  TECHNICAL_GUIDE.md  populate_markets.py  pyproject.toml
.claude/: settings.local.json
bd/: config.py  dashboard.py  formatting.py  models.py  pipeline.py  save.py
bd/discover/: report.py  scorer.py
bd/market/: report.py
bd/outreach/: drafter.py
bd/research/: report.py
data/: dashboard.json  discovery.md  market_intelligence.md  outreach.md  research.md
docs/: app.js  dashboard.json  index.html  research.md  style.css
site/: index.html  style.css
